<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/action_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scheduled_messages"
        android:title="@string/action_scheduled_messages"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_debug"
        android:title="@string/action_debug"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_test_message"
        android:title="@string/action_test_message"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_default_sms"
        android:title="@string/action_default_sms"
        app:showAsAction="never" />
</menu>



